--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     // rxbluetooth for bluetooth classic
     implementation 'com.github.ivbaranov:rxbluetooth2:2.1.1'
+
+    // rx-bluetooth-adapter
+    implementation 'com.github.zakaprov:rx-bluetooth-adapter:1.1.1'
 }
