--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        // https://github.com/zakaprov/rx-bluetooth-adapter
+        maven { url 'https://jitpack.io' }
     }
 }
 
